Fixed junit test invocation in pom.xml that seems to have broken sometime recently.