@@ -78,29 +78,28 @@
     <dependency>
       <groupId>jakarta.xml.bind</groupId>
       <artifactId>jakarta.xml.bind-api</artifactId>
-      <version>3.0.0</version>
+      <version>4.0.0</version>
     </dependency>
 
     <!-- Needed for REST API bindings. -->
     <dependency>
       <groupId>jakarta.ws.rs</groupId>
       <artifactId>jakarta.ws.rs-api</artifactId>
-      <version>3.0.0</version>
+      <version>3.1.0</version>
     </dependency>
 
     <!-- For content encoding types. -->
     <dependency>
       <groupId>jakarta.mail</groupId>
       <artifactId>jakarta.mail-api</artifactId>
-      <version>2.0.0</version>
-      <scope>provided</scope>
+      <version>2.1.2</version>
     </dependency>
 
     <!-- For priority annotations. -->
     <dependency>
       <groupId>jakarta.annotation</groupId>
       <artifactId>jakarta.annotation-api</artifactId>
-      <version>2.0.0</version>
+      <version>2.1.1</version>
     </dependency>
 
     <!-- JAXB Runtime -->
@@ -159,20 +158,20 @@
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-api</artifactId>
-      <version>[2.17.0,)</version>
+      <version>[2.17.2,)</version>
     </dependency>
 
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-core</artifactId>
-      <version>[2.17.0,)</version>
+      <version>[2.17.2,)</version>
     </dependency>
 
     <!-- Google JSON parsers for reading configuration data from files. -->
     <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
-      <version>2.2.3</version>
+      <version>2.10.1</version>
     </dependency>
 
     <!-- For FileUtils -->
@@ -246,7 +245,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>[4.13.2,)</version>
+      <version>4.13.2</version>
       <scope>test</scope>
     </dependency>
 
@@ -257,6 +256,12 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-clean-plugin</artifactId>
+      <version>3.3.1</version>
+      <type>maven-plugin</type>
+    </dependency>
   </dependencies>
 
   <build>
@@ -315,10 +320,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
         <configuration>
-          <!-- Compatible down to java 1.8. Tested 1.8, 11, and 15. -->
-          <source>1.8</source>
-          <target>1.8</target>
-          <!-- <releaase>11</releaase> -->
+          <!-- Compatible down to java 11, and 15. -->
+          <release>11</release>
           <compilerArgument>-Xlint:deprecation</compilerArgument>
         </configuration>
       </plugin>
@@ -532,12 +535,18 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.22.0</version>
+        <version>2.22.2</version>
+        <dependencies>
+          <dependency>
+            <groupId>org.apache.maven.surefire</groupId>
+            <artifactId>surefire-junit47</artifactId>
+            <version>2.22.2</version>
+          </dependency>
+        </dependencies>
         <configuration>
           <argLine>--illegal-access=permit</argLine>
-          <argLine>-Xmx1024m -XX:MaxPermSize=256m -Djava.net.preferIPv4Stack=true</argLine>
+          <argLine>-Xmx1024m -Djava.net.preferIPv4Stack=true</argLine>
           <argLine>-Djersey.config.test.container.port=8801</argLine>
-          <argLine>-Dcom.sun.xml.bind.v2.runtime.JAXBContextImpl.fastBoot=true</argLine>
           <argLine>-Dcom.sun.xml.bind.v2.runtime.JAXBContextImpl.fastBoot=true</argLine>
           <argLine>-Dlog4j.configurationFile=./src/test/resources/config/log4j.xml</argLine>
         </configuration>
@@ -554,7 +563,7 @@
 
       <plugin>
         <artifactId>maven-clean-plugin</artifactId>
-        <version>2.5</version>
+        <version>3.3.1</version>
         <configuration>
           <filesets>
             <fileset>
